tests/fixtures/errors/e0909_duplicate_bundle.mimz
// expect: E0909
bundle Foo { valid: bit }
bundle Foo { ready: bit }
module Top {
  out z: bit
  z = 0
}
